# flask_tcc

./: Makefile  README.md  pyproject.toml
flask_tcc/: main.py
